--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cursor-effects": "^1.0.17",
     "framer-motion": "^12.4.7",
+    "install": "^0.13.0",
     "lucide-react": "^0.477.0",
     "next": "14.2.24",
+    "npm": "^10.9.2",
     "react": "^18",
     "react-dom": "^18"
   },
