--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "npm": "^10.9.2",
     "react": "^18",
     "react-animated-cursor": "^2.11.2",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
